--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Maggie Raboin
-description: Digital CV
+description: *Ecologist based out of Duluth, MN*
+test/ test/ test
+
