--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-minimal
 title: Maggie Raboin
-description: *Ecologist based out of Duluth, MN*
-test/ test/ test
+description: Ecologist based out of Duluth, MN
 
