--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Maggie Raboin
-description: Ecologist based out of Duluth, MN
+description: Ecologist based in Duluth, MN
 
